fixed issues;
